MZ-67 MZ-69 Add SubscriptionLog entity with db migration + services when subscription dates are changed UsersController.EditSubscription()  create a SubscriptionLog record. on the user details pageadd table (Kendo UI grid) below the edit section that shows the subscription logs for that user.

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -229,6 +229,10 @@
     <Compile Include="Migrations\201505262107430_AddUsersSubscriptionUtc.Designer.cs">
       <DependentUpon>201505262107430_AddUsersSubscriptionUtc.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505270838519_AddSubscriptionLog.cs" />
+    <Compile Include="Migrations\201505270838519_AddSubscriptionLog.Designer.cs">
+      <DependentUpon>201505270838519_AddSubscriptionLog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -365,6 +369,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505262107430_AddUsersSubscriptionUtc.resx">
       <DependentUpon>201505262107430_AddUsersSubscriptionUtc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505270838519_AddSubscriptionLog.resx">
+      <DependentUpon>201505270838519_AddSubscriptionLog.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
