--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -81,6 +81,7 @@
     <Compile Include="ServiceBase.cs" />
     <Compile Include="SpecificationService.cs" />
     <Compile Include="SponsorService.cs" />
+    <Compile Include="SubscriptionLogService.cs" />
     <Compile Include="SubscriptionService.cs" />
     <Compile Include="UserProfileService.cs" />
     <Compile Include="WishListService.cs" />
