--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Specification.cs" />
     <Compile Include="Sponsor.cs" />
     <Compile Include="Subscription.cs" />
+    <Compile Include="SubscriptionLog.cs" />
     <Compile Include="UserProfile.cs" />
     <Compile Include="WishList.cs" />
     <Compile Include="WishListAdminModel.cs" />
