--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -304,6 +304,8 @@
     <Compile Include="Areas\Api\Controllers\UserController.cs" />
     <Compile Include="Areas\Api\Models\User\UserGetModel.cs" />
     <Compile Include="Areas\Api\Models\User\UserPostModel.cs" />
+    <Compile Include="Areas\Reports\Controllers\SubscriptionsController.cs" />
+    <Compile Include="Areas\Reports\ReportsAreaRegistration.cs" />
     <Compile Include="Controllers\AuctionsController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\KnetController.cs" />
@@ -612,6 +614,10 @@
     <Content Include="Areas\Admin\Views\WishLists\Index.cshtml" />
     <Content Include="Areas\Admin\Views\WishLists\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Users\EditSubscription.cshtml" />
+    <Content Include="Areas\Reports\Views\web.config" />
+    <Content Include="Areas\Reports\Views\Subscriptions\Index.cshtml" />
+    <Content Include="Areas\Reports\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Reports\Views\_ViewStart.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
@@ -723,6 +729,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Api\Views\Shared\" />
+    <Folder Include="Areas\Reports\Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
