--- a/src/Mzayad.Core/Mzayad.Core.csproj
+++ b/src/Mzayad.Core/Mzayad.Core.csproj
@@ -37,6 +37,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\UriExtensions.cs" />
     <Compile Include="Formatting\CurrencyFormatter.cs" />
     <Compile Include="Formatting\DateTimeFormatter.cs" />
     <Compile Include="Formatting\PhoneNumberFormatter.cs" />
