MZ-71 Level Configuration

--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Enum\PaymentStatus.cs" />
     <Compile Include="Enum\SubscriptionStatus.cs" />
     <Compile Include="Enum\UserProfileStatus.cs" />
+    <Compile Include="Level.cs" />
     <Compile Include="ModelBase.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderItem.cs" />
