--- a/src/Mzayad.Services.Tests/Mzayad.Services.Tests.csproj
+++ b/src/Mzayad.Services.Tests/Mzayad.Services.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="AuctionServiceTests.cs" />
     <Compile Include="Fakes\InMemoryDataContext.cs" />
     <Compile Include="Fakes\InMemoryDataContextFactory.cs" />
+    <Compile Include="LevelServiceTest.cs" />
     <Compile Include="NotificationServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Fakes\TestDbAsyncEnumerable.cs" />
@@ -85,6 +86,9 @@
       <Project>{402dadb1-1b34-4489-bd9e-f3e387a941c9}</Project>
       <Name>Mzayad.Services</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
