--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -275,6 +275,7 @@
     <Compile Include="Areas\Admin\Controllers\AuctionsController.cs" />
     <Compile Include="Areas\Admin\Controllers\AvatarsController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoriesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\LevelsController.cs" />
     <Compile Include="Areas\Admin\Controllers\OrdersController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ReportsController.cs" />
@@ -622,6 +623,7 @@
     <Content Include="Areas\Reports\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\SplashAds\Index.cshtml" />
     <Content Include="Areas\Admin\Views\SplashAds\Upload.cshtml" />
+    <Content Include="Areas\Admin\Views\Levels\Index.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
