--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -22,6 +22,7 @@
   <package id="MarkdownSharp" version="1.13.0.0" targetFramework="net451" />
   <package id="MaxMind.Db" version="1.0.0.0" targetFramework="net451" />
   <package id="MaxMind.GeoIP2" version="2.1.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net45" />
@@ -35,6 +36,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
