--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -310,12 +310,15 @@
     <Compile Include="Areas\Admin\Models\WishList\EditViewModel.cs" />
     <Compile Include="Areas\Admin\Models\WishList\IndexViewModel.cs" />
     <Compile Include="Areas\Api\ApiAreaRegistration.cs" />
+    <Compile Include="Areas\Api\Controllers\AuctionsController.cs" />
     <Compile Include="Areas\Api\Controllers\TestController.cs" />
-    <Compile Include="Areas\Api\Controllers\UserController.cs" />
-    <Compile Include="Areas\Api\Models\User\UserGetModel.cs" />
-    <Compile Include="Areas\Api\Models\User\UserPostModel.cs" />
+    <Compile Include="Areas\Api\Controllers\UsersController.cs" />
+    <Compile Include="Areas\Api\Models\Auctions\AuctionModel.cs" />
+    <Compile Include="Areas\Api\Models\Users\UserModel.cs" />
+    <Compile Include="Areas\Api\Models\Users\UserPostModel.cs" />
     <Compile Include="Areas\Reports\Controllers\SubscriptionsController.cs" />
     <Compile Include="Areas\Reports\ReportsAreaRegistration.cs" />
+    <Compile Include="Controllers\ApplicationApiController.cs" />
     <Compile Include="Controllers\AuctionsController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\KnetController.cs" />
@@ -743,6 +746,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Api\Views\Shared\" />
     <Folder Include="Areas\Reports\Models\" />
+    <Folder Include="Views\ApplicationApi\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
