added User.Tokens, Level, and XP

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -237,6 +237,10 @@
     <Compile Include="Migrations\201507081651230_AddSubscriptionDuration.Designer.cs">
       <DependentUpon>201507081651230_AddSubscriptionDuration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201507091056012_AddUserLevelXpTokens.cs" />
+    <Compile Include="Migrations\201507091056012_AddUserLevelXpTokens.Designer.cs">
+      <DependentUpon>201507091056012_AddUserLevelXpTokens.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -379,6 +383,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201507081651230_AddSubscriptionDuration.resx">
       <DependentUpon>201507081651230_AddSubscriptionDuration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507091056012_AddUserLevelXpTokens.resx">
+      <DependentUpon>201507091056012_AddUserLevelXpTokens.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
