MZ-76 renamed Subscriptions.BuyNow() to Buy()

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -727,8 +727,8 @@
     <Content Include="Views\Knet\Test.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\DateTimePicker.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\SubscriptionUtc.cshtml" />
+    <Content Include="Views\Subscriptions\Index.cshtml" />
     <Content Include="Views\Subscriptions\Buy.cshtml" />
-    <Content Include="Views\Subscriptions\BuyNow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
