--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Mzayad.Data</RootNamespace>
     <AssemblyName>Mzayad.Data</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -245,6 +246,10 @@
     <Compile Include="Migrations\201507091144131_RenameSubscriptionPriceFields.Designer.cs">
       <DependentUpon>201507091144131_RenameSubscriptionPriceFields.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201507091434549_UpdateOrderItemForSubscription.cs" />
+    <Compile Include="Migrations\201507091434549_UpdateOrderItemForSubscription.Designer.cs">
+      <DependentUpon>201507091434549_UpdateOrderItemForSubscription.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -393,6 +398,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201507091144131_RenameSubscriptionPriceFields.resx">
       <DependentUpon>201507091144131_RenameSubscriptionPriceFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507091434549_UpdateOrderItemForSubscription.resx">
+      <DependentUpon>201507091434549_UpdateOrderItemForSubscription.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
