MZ-76 reworking buy with tokens pages

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -730,6 +730,7 @@
     <Content Include="Views\Shared\DisplayTemplates\SubscriptionUtc.cshtml" />
     <Content Include="Views\Subscriptions\Index.cshtml" />
     <Content Include="Views\Subscriptions\Buy.cshtml" />
+    <Content Include="Views\Subscriptions\BuyWithTokens.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
