MZ-76 updated ValidateSubscription to return SubscriptionValidationResult

--- a/src/Mzayad.Services.Tests/Mzayad.Services.Tests.csproj
+++ b/src/Mzayad.Services.Tests/Mzayad.Services.Tests.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Fakes\TestDbAsyncEnumerator.cs" />
     <Compile Include="Fakes\TestDbAsyncQueryProvider.cs" />
     <Compile Include="Fakes\TestDbSet.cs" />
+    <Compile Include="SubscriptionServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
