MZ-76 adding TokenLogs

--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Sponsor.cs" />
     <Compile Include="Subscription.cs" />
     <Compile Include="SubscriptionLog.cs" />
+    <Compile Include="TokenLog.cs" />
     <Compile Include="UserProfile.cs" />
     <Compile Include="WishList.cs" />
     <Compile Include="WishListAdminModel.cs" />
