MZ-76 added DateTimeExtensions.ToLocalTime; added KendoExtensions.FormatDateTime(); refined subscription log report

--- a/src/Mzayad.Core/Mzayad.Core.csproj
+++ b/src/Mzayad.Core/Mzayad.Core.csproj
@@ -37,6 +37,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\UriExtensions.cs" />
     <Compile Include="Formatting\CurrencyFormatter.cs" />
     <Compile Include="Formatting\DateTimeFormatter.cs" />
