--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -310,6 +310,7 @@
     <Compile Include="Areas\Api\Models\Users\UserModel.cs" />
     <Compile Include="Areas\Api\Models\Users\UserPostModel.cs" />
     <Compile Include="Areas\Reports\Controllers\SubscriptionsController.cs" />
+    <Compile Include="Areas\Reports\Models\Subscriptions\SubscriptionLogViewModel.cs" />
     <Compile Include="Areas\Reports\ReportsAreaRegistration.cs" />
     <Compile Include="Controllers\ApplicationApiController.cs" />
     <Compile Include="Controllers\AuctionsController.cs" />
@@ -575,6 +576,7 @@
     <Content Include="Content\nivo\default\next.png" />
     <Content Include="Content\nivo\default\prev%402x.png" />
     <Content Include="Content\nivo\default\prev.png" />
+    <Content Include="Scripts\site-kendo.js" />
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml">
       <SubType>Code</SubType>
     </Content>
@@ -612,7 +614,7 @@
     <Content Include="Areas\Admin\Views\WishLists\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Users\EditSubscription.cshtml" />
     <Content Include="Areas\Reports\Views\web.config" />
-    <Content Include="Areas\Reports\Views\Subscriptions\Index.cshtml" />
+    <Content Include="Areas\Reports\Views\Subscriptions\Logs.cshtml" />
     <Content Include="Areas\Reports\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Reports\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\SplashAds\Index.cshtml" />
@@ -666,6 +668,7 @@
     <Content Include="Scripts\_references.js" />
     <Content Include="Scripts\nivo\bower.json" />
     <Content Include="Scripts\nivo\README.md" />
+    <Content Include="Scripts\site-kendo.js.map" />
     <None Include="Views\Home\SignalR.cshtml" />
     <Content Include="404.html" />
     <Content Include="500.html" />
@@ -733,7 +736,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Api\Views\Shared\" />
-    <Folder Include="Areas\Reports\Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -767,6 +769,9 @@
       <LastGenOutput>Global.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Mzayad.Web.Resources</CustomToolNamespace>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <TypeScriptCompile Include="Scripts\site-kendo.ts" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
