--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -47,6 +47,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.5" targetFramework="net451" />
   <package id="Mindscape.Raygun4Net.Core" version="5.0.0" targetFramework="net451" />
   <package id="Mindscape.Raygun4Net.Mvc" version="5.0.0" targetFramework="net451" />
   <package id="Moment.js" version="2.10.2" targetFramework="net451" />
