--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -254,6 +254,10 @@
     <Compile Include="Migrations\201507131452306_AddTokenLogs.Designer.cs">
       <DependentUpon>201507131452306_AddTokenLogs.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508011543333_AddTrophy.cs" />
+    <Compile Include="Migrations\201508011543333_AddTrophy.Designer.cs">
+      <DependentUpon>201508011543333_AddTrophy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -408,6 +412,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201507131452306_AddTokenLogs.resx">
       <DependentUpon>201507131452306_AddTokenLogs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508011543333_AddTrophy.resx">
+      <DependentUpon>201508011543333_AddTrophy.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
