MZ-88 Show user's trophies in dashboard

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -258,6 +258,10 @@
     <Compile Include="Migrations\201508022203509_AddTrophy.Designer.cs">
       <DependentUpon>201508022203509_AddTrophy.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508081237389_AddUsertrophies.cs" />
+    <Compile Include="Migrations\201508081237389_AddUsertrophies.Designer.cs">
+      <DependentUpon>201508081237389_AddUsertrophies.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -415,6 +419,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201508022203509_AddTrophy.resx">
       <DependentUpon>201508022203509_AddTrophy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508081237389_AddUsertrophies.resx">
+      <DependentUpon>201508081237389_AddUsertrophies.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
