--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -105,6 +105,7 @@
     <Compile Include="TokenLog.cs" />
     <Compile Include="Trophy.cs" />
     <Compile Include="UserProfile.cs" />
+    <Compile Include="UserTrophy.cs" />
     <Compile Include="WishList.cs" />
     <Compile Include="WishListAdminModel.cs" />
   </ItemGroup>
