adde db merge migration

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -261,7 +261,7 @@
     <Compile Include="Migrations\201507281150437_AddActivityEvents.cs" />
     <Compile Include="Migrations\201507281150437_AddActivityEvents.Designer.cs">
       <DependentUpon>201507281150437_AddActivityEvents.cs</DependentUpon>
-    </Compile>  
+    </Compile>
     <Compile Include="Migrations\201508022203509_AddTrophy.cs" />
     <Compile Include="Migrations\201508022203509_AddTrophy.Designer.cs">
       <DependentUpon>201508022203509_AddTrophy.cs</DependentUpon>
@@ -269,6 +269,10 @@
     <Compile Include="Migrations\201508081237389_AddUsertrophies.cs" />
     <Compile Include="Migrations\201508081237389_AddUsertrophies.Designer.cs">
       <DependentUpon>201508081237389_AddUsertrophies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508111047156_MergeMigration.cs" />
+    <Compile Include="Migrations\201508111047156_MergeMigration.Designer.cs">
+      <DependentUpon>201508111047156_MergeMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -427,12 +431,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201507281150437_AddActivityEvents.resx">
       <DependentUpon>201507281150437_AddActivityEvents.cs</DependentUpon>
-    </EmbeddedResource>  
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201508022203509_AddTrophy.resx">
       <DependentUpon>201508022203509_AddTrophy.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201508081237389_AddUsertrophies.resx">
       <DependentUpon>201508081237389_AddUsertrophies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508111047156_MergeMigration.resx">
+      <DependentUpon>201508111047156_MergeMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
