--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -16,6 +16,7 @@
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net451" />
   <package id="Humanizer" version="1.33.7" targetFramework="net451" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="2.2.6" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.11.3" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net451" />
