MZ-93 building out Buy Now view

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -633,6 +633,8 @@
     <Content Include="Areas\Reports\Views\Tokens\Logs.cshtml" />
     <Content Include="Areas\Admin\Views\Trophies\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Trophies\Edit.cshtml" />
+    <Content Include="Content\site-typography.less" />
+    <None Include="compilerconfig.json" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
