--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -7,8 +7,8 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <RaygunSettings apikey="gXc0djLmI5/xbw6e3UsK4w==" excludeErrorsFromLocal="true" />
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Mzayad.mdf;Initial Catalog=Mzayad;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="DefaultConnection" connectionString="Server=tcp:nvq2uy65rq.database.windows.net,1433;Database=Mzayad;User ID=mzayad@nvq2uy65rq;Password=ycQoEa6MAdUT4UPKWXjZ;Trusted_Connection=False;Encrypt=True;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Mzayad.mdf;Initial Catalog=Mzayad;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Server=tcp:nvq2uy65rq.database.windows.net,1433;Database=Mzayad;User ID=mzayad@nvq2uy65rq;Password=ycQoEa6MAdUT4UPKWXjZ;Trusted_Connection=False;Encrypt=True;Connection Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
